Fixed the overlapping copyright text.

--- a/css/main_style.css
+++ b/css/main_style.css
@@ -78,7 +78,7 @@ h1 {
 
 #webmap-reviews {
   text-align: left;
-  font-size: 25px;
+  font-size: 20px;
   position: relative;
 }
 
